--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "mysql2": "^2.2.5",
     "strip-ansi": "^6.0.1",
     "wrap-ansi": "^7.0.0"
